# GradingAssistant

./: .gitignore  README.md  model_config.yaml  pyproject.toml
Demo/: Arch Genrator_PatternBuilder_Usecases.docx
apps/: app_avatar_viseme.py  app_grading_assistant.py
assets/: README.md
configs/: model_config.yaml  personas.yaml
prompts/: classifier.yaml  critique.yaml  extractor.yaml  gaps.yaml  grader.yaml  narrator.yaml  orchestrator_system.yaml  persona_system.yaml  planner.yaml  quiz.yaml  rubric.yaml  syllabus_builder.yaml  voice.yaml
protocols/: a2a.py
samples/inputs/: README.md
